# shenron

./: .gitignore  DESIGN-CN.md  DESIGN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: TODO-observe-digest.md
launchd/: com.1984.shenron.focus.plist  com.1984.wiki.phase2.plist
scripts/: claude-md-scan.py
src/shenron/: __init__.py  __main__.py  cli.py  compiler.py  config.py  digester.py  discovery.py  exporter.py  focuser.py  formatter.py  grepper.py  models.py  parser.py  pricing.py  searcher.py  stats.py
tests/: conftest.py  test_cli.py  test_compiler.py  test_discovery.py  test_exporter.py  test_observations.py  test_parser.py  test_searcher.py  test_stats.py
tests/fixtures/: sample_session.jsonl
