[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shenron"
version = "0.1.0"
description = "Shenron 神龍 — Search, browse, and analyse your Claude Code session history"
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [
    { name = "小code & Rob" },
]
keywords = ["claude", "claude-code", "session", "history", "search", "analytics", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
]

[project.scripts]
shenron = "shenron.cli:app"

[project.urls]
Homepage = "https://github.com/robbery107allianz-cell/shenron"
Repository = "https://github.com/robbery107allianz-cell/shenron"
Issues = "https://github.com/robbery107allianz-cell/shenron/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/shenron"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.coverage.run]
source = ["shenron"]

[tool.coverage.report]
fail_under = 70
omit = [
    "src/shenron/digester.py",
    "src/shenron/focuser.py",
    "src/shenron/compiler.py",
]
